--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,8 +1,8 @@
 # Erlang version
-erlang_version=18.2.1
+erlang_version=20.0
 
 # Elixir version
-elixir_version=1.2.0
+elixir_version=1.5.0
 
 # Always rebuild from scratch on every deploy?
 always_rebuild=false
@@ -17,4 +17,4 @@ hook_pre_compile="pwd"
 hook_post_compile="pwd"
 
 # Set the path the app is run from
-runtime_path=/app
+# runtime_path=/app
